--- a/marketing.css
+++ b/marketing.css
@@ -387,7 +387,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	min-height: 30px;
     border: none;
     color: #ffffff;
-    padding: 12px 14px;
+    padding: 13px 14px;
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
@@ -431,7 +431,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	flex: 50%;
 	width: 50%;
-	padding: 0 20px;
+	padding: 0 25px;
 }
 
 .slidecol{
@@ -496,12 +496,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a{
-	background-color: transparent;
+	background-color: #111111;
 	width: 150px;
 	min-height: 35px;
     border: none;
-    color: #111111;
-    padding: 15px 14px;
+    color: #ffffff;
+    padding: 13px 14px;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -517,8 +517,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a:hover{
-	color: #ffffff;
-	background-color: #111111;
+	color: #111111;
+	background: transparent;
 	border-color: #111111;
 }
 
@@ -534,15 +534,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .next_slide{
 	font-size: 14px;
 	transition: 0.6s ease;
-	border-radius: 0 3px 3px 0;
-	background-color: #111111;
+	background: transparent;
 	width: auto;
 	padding: 10px 16px;
-	color: #ffffff;
+	color: #111111;
 	cursor: pointer;
 	border: solid 1px #111111;
 	display: inline-block;
-	border-radius: 3px;
 }
 
 .prev_slide{
@@ -551,8 +549,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .next_slide:hover,
 .prev_slide:hover{
-	background-color: transparent;
-	color: #111111;
+	background-color: #111111;
+	color: #ffffff;
 	border-color: #111111;
 }
 
@@ -816,8 +814,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .area_button > a::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -892,7 +888,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .list_num{
 	width: 75px;
 	height: 75px;
-	background: #ffffff;
+	background-color: #ffffff;
 	border-radius: 50%;
 	display: block;
 	margin-bottom: 25px;
@@ -956,8 +952,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .box_button > a::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1310,13 +1304,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: 14px;
 }
 
-.client_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	overflow: hidden;
-}
-
 .client_name{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
@@ -1535,8 +1522,6 @@ a.blog_btn{
 a.blog_btn::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1599,9 +1584,9 @@ a.blog_btn::after{
 
 .col_info input[type="email"]{
 	width: 350px;
-	padding: 11px 20px 14px;
+	padding: 11px 14px 14px;
 	padding-right: 50px;
-	border: 0;
+	border: none;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	display: inline-block;
@@ -1615,13 +1600,12 @@ a.blog_btn::after{
 .col_info input[type="submit"]{
 	display: inline-block;
 	width: auto;
-	padding: 11px 24px;
+	padding: 10px 24px 11px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
 	font-weight: 500;
 	text-transform: uppercase;
-	margin: 0;
 	margin-left: -4px;
 	color: #ffffff;
 	border-radius: 0;
@@ -1854,6 +1838,14 @@ a.footer-brand img{
 		flex: 50%;
 		width: 50%;
 	}
+	
+	.col_info input[type="submit"]{
+		padding: 10px 24px 12px;
+	}
+
+	.col_info input[type="email"]{
+		padding: 12px 14px 13px;
+	}
 }
 
 @media only screen and (max-width: 992px){
@@ -1997,6 +1989,10 @@ a.footer-brand img{
 		font-size: 30px;
 	}
 	
+	.slidenav{
+		margin-bottom: -50px;
+	}
+	
 	.marketing_head,
 	.square_box h2,
 	.bg_head{
@@ -2067,10 +2063,6 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 420px){
-	.slidenav{
-		margin-bottom: -50px;
-	}
-	
 	.icon_col,
 	.square_col,
 	.client_col,
